[build-system]
requires = ['setuptools', 'wheel', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name = "django-password-policies-validator"
description = "A Django app to validate password complexity and prevent users from reusing previous passwords."
readme = "README.rst"
requires-python = ">=3.8"
keywords = ["django", "password", "validator"]
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[project.urls]
"Github Repository" = "https://github.com/i3thuan5/django-password-policies-validator"
