[build-system]
requires = ['setuptools', 'wheel', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name = "django-password-policies-validator"
version = "0.1.1"
description = "A Django app to validate password complexity and prevent users from reusing previous passwords."
readme = "README.rst"
requires-python = ">=3.8"
keywords = ["django", "password", "validator"]
license = { file="LICENSE" }
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]

[project.urls]
"Github Repository" = "https://github.com/i3thuan5/django-password-policies-validator"

[tool.setuptools_scm]
